--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ span {
 
 /* Hero Section */
 #hero {
-	background-image: url(images/hero-bg.png);
+	background-image: url(images/hero-bg2.jpg);
 	background-size: cover;
 	background-position: top center;
 	position: relative;
