--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 html {
 	font-size: 10px;
-	font-family: 'Montserrat', sans-serif;
+	font-family:sans-serif;
 	scroll-behavior: smooth;
 }
 a {
@@ -730,45 +730,6 @@ h3{
 }
 @Media only screen and (max-width: 600px){
 	#projects .col-3 img{
-		flex-basis: 100%;
-	}
-}
-
-/*------------Contact Section-------*/
-.contact-col{
-    flex-basis: 100%;
-    margin-bottom: 30px;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
-}
-.contact-col h4{
-	font-size: 25px;
-	margin-top: 15px;
-}
-.contact-col input, .contact-col textarea{
-    width: 50%;
-    padding: 15px;
-	margin: 5px;
-    margin-bottom: 17px;
-    outline: none;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-    font-family: 'Trebuchet MS', sans-serif;
-    background: lightgray;
-    color: #f44336;
-	box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
-}
-.contact-col input::placeholder, .contact-col textarea::placeholder{
-    color: #000;
-}
-.contact-col .cta{
-	color: #000000;
-	margin-top: -5px;
-}
-@media only screen and (max-width:600px) {
-	.contact-col input, .contact-col textarea{
-		width: 100%;
 		flex-basis: 100%;
 	}
 }
